# fantastic-waffle

django-polls/: LICENSE  pyproject.toml
django-polls/django_polls/: admin.py  models.py  urls.py  views.py
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django-polls/django_polls/migrations/: 0001_initial.py  0004_grade.py  0006_difficulty.py
django-polls/django_polls/static/polls/: style.css
django-polls/django_polls/templates/polls/: base.html  details.html  index.html  results.html
djangotutorial/: db.sqlite3
djangotutorial/accounts/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
djangotutorial/accounts/migrations/: 0001_initial.py
djangotutorial/accounts/templates/: base.html
djangotutorial/accounts/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/payments/: decorators.py  models.py  services.py  urls.py  views.py
djangotutorial/payments/migrations/: 0001_initial.py
djangotutorial/payments/templates/payments/: plan_list.html
djangotutorial/polls/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
djangotutorial/polls/migrations/: 0002_delete_email.py  0003_alter_choice_question.py  0005_alter_grade_grade.py  0007_alter_difficulty_difficulty.py  0008_alter_grade_choice.py
djangotutorial/polls/templates/polls/: index.html  (+3 more)
djangotutorial/static/css/: payment.css  style.css
djangotutorial/templates/: base.html
