[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polls"
version = "0.1"
description = "A Django app to conduct web-based polls."
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"

authors = [
{ name = "Swanta Stephen Jnr", email = "swantastephen@gmail.com" }
]

dependencies = [
"asgiref==3.11.1",
"Django==5.2.13",
"django-debug-toolbar==6.3.0",
"sqlparse==0.5.5",
"typing_extensions==4.15.0",
"tzdata==2026.2"
]

classifiers = [
"Environment :: Web Environment",
"Framework :: Django",
"Intended Audience :: Developers",
"Operating System :: OS Independent",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Topic :: Internet :: WWW/HTTP",
"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://www.example.com/"
